remove forceful window activation

use the same sequence as QtSingleApplication

BUG: 371220